# django_marketplace

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  redate.sh
account/: admin.py  forms.py  models.py  urls.py  views.py
account/templates/account/: account.html  profile.html
cart/: cart.py  urls.py  views.py
cart/templates/cart/: summary.html
config/: Readme.md  admin_constance_config.py
locale/RU/LC_MESSAGES/: django.po
megano_shop/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
megano_shop/services/: compare.py  discounts.py  goods_views.py  payment_service.py  reviews.py
megano_shop/templates/megano_shop/: catalog.html  category_list.html  compare.html  compare_products.html  get_delivery_info.html  get_payment_type_info.html  (+4 more)
megano_shop/templatetags/: card_tags.py  category_tags.py  compare_tags.py
megano_shop/utils/: cache_utils.py  filter_utils.py  order_utils.py
nginx/: nginx.conf
payment/: apps.py  forms.py  payment.py  tasks.py  urls.py  views.py
payment_api/: Dockerfile  app.py
python_django_team17/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: entrypoint.sh
templates/: about.html  base.html  base_form.html  catalog.html  contacts.html  e-mail.html  footer.html  header.html  header_form.html  historyorder.html  historyview.html  index.html  login.html  message_to_the_mail.html  navigation.html  oneorder.html  password.html  product.html  profileAvatar.html  progressPayment.html  registr.html  sale.html  shop.html
(+24 files in other folders)
